--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keyboard - клавиаутра как у Google</title>
+    <title>Keyboard - клавиатура как у Google</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form action="">
-        <input type="text">
-    </form>
-    <div>
-        &#128430;
+    <div class="form__wrap">
+        <form class="form">
+            <input class="form__input" type="text">
+            <button class="form__button" class="open" type="button">&#128430;</button>
+        </form>
     </div>
     <div class="keyboard">
         <div class="keyboard__header">
